--- a/booking.html
+++ b/booking.html
@@ -106,7 +106,7 @@
 
     <script>
         // ⚠️ อย่าลืมเอา URL เดิมของคุณมาใส่ตรงนี้
-        const scriptURL = 'YOUR_GOOGLE_SCRIPT_URL_HERE';
+        const scriptURL = 'https://docs.google.com/spreadsheets/d/1NomRb1i3POc9nDBMH0IbluVUTrFGkbe2DJyQHW8oN_A/edit?usp=sharing';
 
         const form = document.getElementById('bookingForm');
         const btn = document.querySelector('.btn-submit');
@@ -138,4 +138,5 @@
         });
     </script>
 </body>
+
 </html>
