--- a/booking.html
+++ b/booking.html
@@ -106,7 +106,7 @@
 
     <script>
         // ⚠️ อย่าลืมเอา URL เดิมของคุณมาใส่ตรงนี้
-        const scriptURL = 'https://docs.google.com/spreadsheets/d/1NomRb1i3POc9nDBMH0IbluVUTrFGkbe2DJyQHW8oN_A/edit?usp=sharing';
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbx-h0uf5W7C-ircgfMjgb77YpjD9hB24Wt4CvgskbFyPzUp3SlTsXf9-zojYuOY22uq/exec';
 
         const form = document.getElementById('bookingForm');
         const btn = document.querySelector('.btn-submit');
@@ -140,3 +140,4 @@
 </body>
 
 </html>
+
