--- a/booking.html
+++ b/booking.html
@@ -33,12 +33,12 @@
                 <label>ประเภทรองเท้า (Shoe Type)</label>
                 <select name="shoe_type" required>
                     <option value="">-- กรุณาเลือก --</option>
-                    <option value="sneakers">ร้องเท้าผ้าใบ (Sneakers)</option>
-                    <option value="Suede sneakers">ร้องเท้าผ้าใบหนังกลับ (Suede sneakers)</option>
-                    <option value="Nubuck">ร้องเท้าหนังนูบัค (Nubuck leather shoes)</option>
-                    <option value="boots">ร้องเท้าหนัง (leather)</option>
+                    <option value="sneakers">รองเท้าผ้าใบ (Sneakers)</option>
+                    <option value="Suede sneakers">รองเท้าผ้าใบหนังกลับ (Suede sneakers)</option>
+                    <option value="Nubuck">รองเท้าหนังนูบัค (Nubuck leather shoes)</option>
+                    <option value="boots">รองเท้าหนัง (leather)</option>
                     <option value="sandals">รองเท้าแตะ (Sandals)</option>
-                    <option value="basketball">ร้องเท้าบาส (basketball shoes)</option>
+                    <option value="basketball">รองเท้าบาส (basketball shoes)</option>
                     <option value="other">อื่นๆ (Other)</option>
                     
                 </select>
@@ -140,5 +140,6 @@
 </body>
 
 </html>
+
 
 
