--- a/booking.html
+++ b/booking.html
@@ -155,53 +155,53 @@
 
         // ... (ตัวแปร scriptURL, form เดิม) ...
 
-// --- ฟังก์ชันคำนวณราคา ---
-function calculateTotal() {
-    let total = 189; // ราคาตั้งต้น
+// // --- ฟังก์ชันคำนวณราคา ---
+// function calculateTotal() {
+//     let total = 189; // ราคาตั้งต้น
 
-    // 1. เช็คประเภทรองเท้า (ถ้าเป็นหนังกลับ +100)
-    const shoeType = document.getElementById('shoeType').value;
-    if (shoeType === 'Suede sneakers') {
-        total += 100;
-    }
+//     // 1. เช็คประเภทรองเท้า (ถ้าเป็นหนังกลับ +100)
+//     const shoeType = document.getElementById('shoeType').value;
+//     if (shoeType === 'Suede sneakers') {
+//         total += 100;
+//     }
 
-    // 2. เช็คความด่วน (Radio Button)
-    const speedRadios = document.getElementsByName('service_speed');
-    for (const radio of speedRadios) {
-        if (radio.checked) {
-            total += parseInt(radio.value);
-            break; 
-        }
-    }
+//     // 2. เช็คความด่วน (Radio Button)
+//     const speedRadios = document.getElementsByName('service_speed');
+//     for (const radio of speedRadios) {
+//         if (radio.checked) {
+//             total += parseInt(radio.value);
+//             break; 
+//         }
+//     }
 
-    // 3. เช็คบริการเสริม (Checkbox)
-    const chkYellow = document.getElementById('chk_yellow');
-    const chkOzone = document.getElementById('chk_ozone');
+//     // 3. เช็คบริการเสริม (Checkbox)
+//     const chkYellow = document.getElementById('chk_yellow');
+//     const chkOzone = document.getElementById('chk_ozone');
 
-    if (chkYellow.checked) total += 299;
-    if (chkOzone.checked) total += 129;
+//     if (chkYellow.checked) total += 299;
+//     if (chkOzone.checked) total += 129;
 
-    // อัปเดตตัวเลขในหน้าจอ
-    document.getElementById('displayTotal').innerText = total.toLocaleString(); // ใส่ลูกน้ำหลักพัน
+//     // อัปเดตตัวเลขในหน้าจอ
+//     document.getElementById('displayTotal').innerText = total.toLocaleString(); // ใส่ลูกน้ำหลักพัน
     
-    return total; // ส่งค่ากลับไปใช้ตอนกดจ่ายเงิน
-}
+//     return total; // ส่งค่ากลับไปใช้ตอนกดจ่ายเงิน
+// }
 
-// อัปเดต Event Listener ของปุ่ม "ดำเนินการชำระเงิน"
-document.getElementById('openPayment').addEventListener('click', () => {
-    if(form.checkValidity()) { 
-        // คำนวณราคาสุดท้ายอีกครั้ง
-        const finalPrice = calculateTotal();
+// // อัปเดต Event Listener ของปุ่ม "ดำเนินการชำระเงิน"
+// document.getElementById('openPayment').addEventListener('click', () => {
+//     if(form.checkValidity()) { 
+//         // คำนวณราคาสุดท้ายอีกครั้ง
+//         const finalPrice = calculateTotal();
         
-        // (Optional) แสดงยอดเงินใน Modal เพื่อย้ำลูกค้า
-        // คุณอาจต้องเพิ่ม <p id="modalPrice">...</p> ใน Modal HTML ก่อน
-        // document.getElementById('modalPrice').innerText = "ยอดโอน: " + finalPrice + " บาท";
+//         // (Optional) แสดงยอดเงินใน Modal เพื่อย้ำลูกค้า
+//         // คุณอาจต้องเพิ่ม <p id="modalPrice">...</p> ใน Modal HTML ก่อน
+//         // document.getElementById('modalPrice').innerText = "ยอดโอน: " + finalPrice + " บาท";
 
-        paymentModal.style.display = 'flex'; 
-    } else { 
-        form.reportValidity(); 
-    }
-});
+//         paymentModal.style.display = 'flex'; 
+//     } else { 
+//         form.reportValidity(); 
+//     }
+// });
 
 // ... (ส่วน submit form เหมือนเดิม) ...
 
@@ -227,3 +227,4 @@ document.getElementById('openPayment').addEventListener('click', () => {
     </script>
 </body>
 </html>
+
